# devEMF

./: COPYRIGHTS  DESCRIPTION  MD5  NAMESPACE  NEWS  THANKS  configure  configure.ac
R/: emf.R  zzz.R
inst/afm/: README
man/: emf.Rd
src/: Makevars  Makevars.win  devEMF.cpp  emf+.h  emf.h  fontembed.h  fontmetrics.h  ps_fonts.h  winnt.h
